@@ -13,6 +13,10 @@
     *   (ms) Applied patch by Mitchell Perilstein for 5.005it and the
              two-argument binmode() that 5.005 doesn't support.
              (http://rt.cpan.org/Ticket/Display.html?id=34051)
+    *   (ms) Applied patch by Emmanuel Rodriguez (POTYL) doing away with 
+             hard-coded line numbers in 024WarnDieCarp.t to make it work
+             cpan2rpm for building RPM packages 
+             (http://rt.cpan.org/Public/Bug/Display.html?id=35370)
 
 1.15 (2008/02/10)
     *   (ms) appender_thresholds_adjust() with a parameter of 0 now
